[package]
name = "ironclad_rule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.5"
itertools = "0.10.5"

[[bin]]
name = "a01"
path = "src/a01.rs"

[[bin]]
name = "a02"
path = "src/a02.rs"

[[bin]]
name = "a03"
path = "src/a03.rs"

[[bin]]
name = "a04"
path = "src/a04.rs"

[[bin]]
name = "a05"
path = "src/a05.rs"

[[bin]]
name = "a06"
path = "src/a06.rs"

[[bin]]
name = "a16"
path = "src/a16.rs"

[[bin]]
name = "a17"
path = "src/a17.rs"

[[bin]]
name = "a18"
path = "src/a18.rs"

[[bin]]
name = "a19"
path = "src/a19.rs"

[[bin]]
name = "a20"
path = "src/a20.rs"

[[bin]]
name = "a21"
path = "src/a21.rs"

[[bin]]
name = "a51"
path = "src/a51.rs"

[[bin]]
name = "a52"
path = "src/a52.rs"

[[bin]]
name = "a53"
path = "src/a53.rs"

[[bin]]
name = "a54"
path = "src/a54.rs"

[[bin]]
name = "a55"
path = "src/a55.rs"

[[bin]]
name = "a61"
path = "src/a61.rs"

[[bin]]
name = "a62"
path = "src/a62.rs"

[[bin]]
name = "a63"
path = "src/a63.rs"

[[bin]]
name = "a64"
path = "src/a64.rs"

[[bin]]
name = "b01"
path = "src/b01.rs"

[[bin]]
name = "b02"
path = "src/b02.rs"

[[bin]]
name = "b03"
path = "src/b03.rs"

[[bin]]
name = "b04"
path = "src/b04.rs"

[[bin]]
name = "b06"
path = "src/b06.rs"

[[bin]]
name = "b16"
path = "src/b16.rs"

[[bin]]
name = "b17"
path = "src/b17.rs"

[[bin]]
name = "b18"
path = "src/b18.rs"

[[bin]]
name = "b19"
path = "src/b19.rs"

[[bin]]
name = "b20"
path = "src/b20.rs"

[[bin]]
name = "b39"
path = "src/b39.rs"

[[bin]]
name = "b51"
path = "src/b51.rs"

[[bin]]
name = "b52"
path = "src/b52.rs"

[[bin]]
name = "b54"
path = "src/b54.rs"

[[bin]]
name = "b55"
path = "src/b55.rs"

[[bin]]
name = "b61"
path = "src/b61.rs"

[[bin]]
name = "b62"
path = "src/b62.rs"

[[bin]]
name = "b63"
path = "src/b63.rs"

[[bin]]
name = "b64"
path = "src/b64.rs"