[package]
name = "ironclad_rule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.5"
itertools = "0.10.5"

[[bin]]
name = "a01"
path = "src/a01.rs"

[[bin]]
name = "a02"
path = "src/a02.rs"

[[bin]]
name = "a03"
path = "src/a03.rs"

[[bin]]
name = "a04"
path = "src/a04.rs"

[[bin]]
name = "a05"
path = "src/a05.rs"

[[bin]]
name = "a06"
path = "src/a06.rs"

[[bin]]
name = "a07"
path = "src/a07.rs"

[[bin]]
name = "a13"
path = "src/a13.rs"

[[bin]]
name = "a16"
path = "src/a16.rs"

[[bin]]
name = "a17"
path = "src/a17.rs"

[[bin]]
name = "a18"
path = "src/a18.rs"

[[bin]]
name = "a19"
path = "src/a19.rs"

[[bin]]
name = "a20"
path = "src/a20.rs"

[[bin]]
name = "a21"
path = "src/a21.rs"

[[bin]]
name = "a26"
path = "src/a26.rs"

[[bin]]
name = "a27"
path = "src/a27.rs"

[[bin]]
name = "a28"
path = "src/a28.rs"

[[bin]]
name = "a29"
path = "src/a29.rs"

[[bin]]
name = "a30"
path = "src/a30.rs"

[[bin]]
name = "a31"
path = "src/a31.rs"

[[bin]]
name = "a32"
path = "src/a32.rs"

[[bin]]
name = "a33"
path = "src/a33.rs"

[[bin]]
name = "a34"
path = "src/a34.rs"

[[bin]]
name = "a35"
path = "src/a35.rs"

[[bin]]
name = "a36"
path = "src/a36.rs"

[[bin]]
name = "a37"
path = "src/a37.rs"

[[bin]]
name = "a38"
path = "src/a38.rs"

[[bin]]
name = "a39"
path = "src/a39.rs"

[[bin]]
name = "a40"
path = "src/a40.rs"

[[bin]]
name = "a41"
path = "src/a41.rs"

[[bin]]
name = "a42"
path = "src/a42.rs"

[[bin]]
name = "a51"
path = "src/a51.rs"

[[bin]]
name = "a52"
path = "src/a52.rs"

[[bin]]
name = "a53"
path = "src/a53.rs"

[[bin]]
name = "a54"
path = "src/a54.rs"

[[bin]]
name = "a55"
path = "src/a55.rs"

[[bin]]
name = "a56"
path = "src/a56.rs"

[[bin]]
name = "a61"
path = "src/a61.rs"

[[bin]]
name = "a62"
path = "src/a62.rs"

[[bin]]
name = "a63"
path = "src/a63.rs"

[[bin]]
name = "a64"
path = "src/a64.rs"

[[bin]]
name = "a65"
path = "src/a65.rs"

[[bin]]
name = "a66"
path = "src/a66.rs"

[[bin]]
name = "a67"
path = "src/a67.rs"

[[bin]]
name = "a68"
path = "src/a68.rs"

[[bin]]
name = "a70"
path = "src/a70.rs"

[[bin]]
name = "b01"
path = "src/b01.rs"

[[bin]]
name = "b02"
path = "src/b02.rs"

[[bin]]
name = "b03"
path = "src/b03.rs"

[[bin]]
name = "b04"
path = "src/b04.rs"

[[bin]]
name = "b06"
path = "src/b06.rs"

[[bin]]
name = "b07"
path = "src/b07.rs"

[[bin]]
name = "b16"
path = "src/b16.rs"

[[bin]]
name = "b17"
path = "src/b17.rs"

[[bin]]
name = "b18"
path = "src/b18.rs"

[[bin]]
name = "b19"
path = "src/b19.rs"

[[bin]]
name = "b20"
path = "src/b20.rs"

[[bin]]
name = "b26"
path = "src/b26.rs"

[[bin]]
name = "b27"
path = "src/b27.rs"

[[bin]]
name = "b28"
path = "src/b28.rs"

[[bin]]
name = "b29"
path = "src/b29.rs"

[[bin]]
name = "b30"
path = "src/b30.rs"

[[bin]]
name = "b31"
path = "src/b31.rs"

[[bin]]
name = "b32"
path = "src/b32.rs"

[[bin]]
name = "b33"
path = "src/b33.rs"

[[bin]]
name = "b34"
path = "src/b34.rs"

[[bin]]
name = "b36"
path = "src/b36.rs"

[[bin]]
name = "b37"
path = "src/b37.rs"

[[bin]]
name = "b38"
path = "src/b38.rs"

[[bin]]
name = "b39"
path = "src/b39.rs"

[[bin]]
name = "b40"
path = "src/b40.rs"

[[bin]]
name = "b41"
path = "src/b41.rs"

[[bin]]
name = "b42"
path = "src/b42.rs"

[[bin]]
name = "b51"
path = "src/b51.rs"

[[bin]]
name = "b52"
path = "src/b52.rs"

[[bin]]
name = "b54"
path = "src/b54.rs"

[[bin]]
name = "b55"
path = "src/b55.rs"

[[bin]]
name = "b56"
path = "src/b56.rs"

[[bin]]
name = "b61"
path = "src/b61.rs"

[[bin]]
name = "b62"
path = "src/b62.rs"

[[bin]]
name = "b63"
path = "src/b63.rs"

[[bin]]
name = "b64"
path = "src/b64.rs"

[[bin]]
name = "b65"
path = "src/b65.rs"

[[bin]]
name = "b67"
path = "src/b67.rs"